# src/modules/payment/payment-api/dto/create-payment-api.dto.ts
@@ -1,0 +1,30 @@
+import {
+  IsEnum,
+  IsNotEmpty,
+  IsOptional,
+  IsString,
+  IsUUID,
+} from 'class-validator';
+import { PaymentStatus } from '../entities/payment-api.entity';
+
+export class CreatePaymentApiDto {
+  @IsUUID()
+  @IsNotEmpty()
+  orderId: string;
+
+  @IsEnum(PaymentStatus)
+  @IsOptional()
+  status?: PaymentStatus;
+
+  @IsString()
+  @IsOptional()
+  extra?: string;
+
+  @IsString()
+  @IsOptional()
+  notes?: string;
+
+  @IsString()
+  @IsNotEmpty()
+  provider: string;
+}
