# src/modules/payment/payment-api/entities/payment-api.entity.ts
@@ -1,0 +1,55 @@
+import {
+  Column,
+  CreateDateColumn,
+  Entity,
+  JoinColumn,
+  ManyToOne,
+  PrimaryGeneratedColumn,
+  UpdateDateColumn,
+} from 'typeorm';
+import { Order } from '../../../orders/order/entities/order.entity';
+
+export enum PaymentStatus {
+  PENDING = 'pending',
+  PROGRESS = 'progress',
+  SUCCESSFUL = 'successful',
+  FAILED = 'failed',
+}
+
+@Entity({ name: 'payments' })
+export class Payment {
+  @PrimaryGeneratedColumn('uuid')
+  id: string;
+
+  @Column({ type: 'uuid' })
+  orderId: string;
+
+  @ManyToOne(() => Order)
+  @JoinColumn({ name: 'orderId' })
+  order: Order;
+
+  @Column({
+    type: 'enum',
+    enum: PaymentStatus,
+    default: PaymentStatus.PENDING,
+  })
+  status: PaymentStatus;
+
+  @Column({ type: 'text', nullable: true })
+  extra: string;
+
+  @Column({ type: 'text', nullable: true })
+  notes: string;
+
+  @Column({ nullable: true })
+  transactionId: string;
+
+  @Column()
+  provider: string;
+
+  @CreateDateColumn()
+  createdAt: Date;
+
+  @UpdateDateColumn()
+  updatedAt: Date;
+}
